# cargo-compatible

./: .editorconfig  .gitignore  AGENTS.md  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benches/: large_workspace_resolver.rs
src/: cli.rs  compat.rs  explain.rs  identity.rs  index.rs  lib.rs  main.rs  manifest_edit.rs  metadata.rs  model.rs  report.rs  resolution.rs  temp_workspace.rs
tests/: integration_cli.rs  version_selection.rs
tests/fixtures/local-registry-manifest-blocker/: Cargo.toml
tests/fixtures/local-registry-manifest-blocker/src/: main.rs
tests/fixtures/lockfile-improvement/: Cargo.toml
tests/fixtures/missing-rust-version/: Cargo.toml
tests/fixtures/missing-rust-version/helper/: Cargo.toml
tests/fixtures/missing-rust-version/helper/src/: lib.rs
tests/fixtures/mixed-workspace/: Cargo.toml
tests/fixtures/mixed-workspace/members/high/: Cargo.toml
tests/fixtures/mixed-workspace/members/high/src/: main.rs
tests/fixtures/mixed-workspace/members/low/: Cargo.toml
tests/fixtures/mixed-workspace/shared/: Cargo.toml
tests/fixtures/mixed-workspace/shared/src/: lib.rs
tests/fixtures/path-too-new/: Cargo.toml
tests/fixtures/path-too-new/src/: main.rs
tests/fixtures/path-too-new/too_new/: Cargo.toml
tests/fixtures/path-too-new/too_new/src/: lib.rs
tests/fixtures/virtual-workspace/: Cargo.toml
tests/fixtures/virtual-workspace/dep/: Cargo.toml
tests/fixtures/virtual-workspace/member/: Cargo.toml
tests/fixtures/virtual-workspace/member/src/: main.rs
tests/snapshots/: integration_cli__explain_path_dep_human.snap  integration_cli__explain_path_dep_markdown.snap  integration_cli__resolve_virtual_workspace_json.snap  integration_cli__resolve_virtual_workspace_markdown.snap  integration_cli__scan_missing_rust_version_json.snap  integration_cli__scan_mixed_workspace_human.snap
