[package]
name = "cargo-compatible"
version = "0.1.0"
edition = "2021"
description = "Cargo subcommand for finding the highest dependency graph compatible with a target Rust version"
license = "MIT"

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.22"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
crates-index = "3.11"
itertools = "0.14"
petgraph = "0.8"
regex = "1.11"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20"
thiserror = "2.0"
toml_edit = "0.23"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
insta = { version = "1.43", features = ["json"] }
predicates = "3.1"
