[package]
name = "cargo-compatible"
version = "0.2.0"
edition = "2021"
rust-version = "1.89"
description = "Cargo subcommand for auditing and resolving dependency graphs against a target Rust version or MSRV"
license = "MIT"
readme = "README.md"
repository = "https://github.com/dunamismax/cargo-compatible"
homepage = "https://github.com/dunamismax/cargo-compatible"
documentation = "https://docs.rs/cargo-compatible"
keywords = ["cargo", "msrv", "rust-version", "dependencies", "compatibility"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]
exclude = [
    "tests/",
    "benches/",
    ".github/",
    "BUILD.md",
    "AGENTS.md",
    "CONTRIBUTING.md",
    "SECURITY.md",
    ".editorconfig",
]

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.22"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
crates-index = "3.11"
itertools = "0.14"
petgraph = "0.8"
regex = "1.11"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20"
thiserror = "2.0"
toml_edit = "0.23"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
criterion = "0.8.2"
insta = { version = "1.43", features = ["json"] }
predicates = "3.1"
proptest = "1.10.0"
sha2 = "0.10"

[[bench]]
name = "large_workspace_resolver"
harness = false
